Adding changes to the contact page.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="card-text-div">
           <p class="card-text-text">
             The most current money settings for our 1688 platform and legacy
-            equiptment.
+            equipment.
           </p>
         </div>
         <div class="card-btn-div"></div>
       </div>
       <!-- Olympus -->
-      <div id="olympus-card" class="card-container">
+      <!-- <div id="olympus-card" class="card-container">
         <div id="olympus-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Olympus Settings</h3>
@@ -40,10 +40,10 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div>
+      </div> -->
       <!-- Olympus end -->
       <!-- Storz -->
-      <div id="storz-card" class="card-container">
+      <!-- <div id="storz-card" class="card-container">
         <div id="storz-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Storz Settings</h3>
@@ -54,7 +54,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div>
+      </div> -->
       <!-- Storz end -->
       <div id="printer-card" class="card-container">
         <div id="printer-card-img-div" class="card-img-div"></div>
@@ -80,6 +80,20 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <!-- Contact Tile-->
+      <div id="contact-card" class="card-container">
+        <div id="contact-card-img-div" class="card-img-div"></div>
+        <div id="contact-card-title" class="card-title-div">
+          <h3 class="card-title-text">Contact Us</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+       Need help? Reach out to the Tech Support Team early and often.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
+      <!-- End Contact Tile-->
       <div id="contribute-settings-card" class="card-container">
         <div id="contribute-settings-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
@@ -89,18 +103,6 @@
           <p class="card-text-text">
             Do you have settings that are perfectly dialed in? Share them here
             with the sales force team.
-          </p>
-        </div>
-        <div class="card-btn-div"></div>
-      </div>
-      <div id="contact-card" class="card-container">
-        <div id="contact-card-img-div" class="card-img-div"></div>
-        <div id="contact-card-title" class="card-title-div">
-          <h3 class="card-title-text">Contact Us</h3>
-        </div>
-        <div class="card-text-div">
-          <p class="card-text-text">
-       Need help? Reach out to the Tech Support Team early and often.
           </p>
         </div>
         <div class="card-btn-div"></div>
