Adding specialty button and settings for Storz.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card-btn-div"></div>
       </div>
       <!-- Olympus -->
-      <!-- <div id="olympus-card" class="card-container">
+      <div id="olympus-card" class="card-container">
         <div id="olympus-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Olympus Settings</h3>
@@ -40,10 +40,10 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div> -->
-      <!-- Olympus end -->
+      </div> 
+      <!-- Olympus end
       <!-- Storz -->
-      <!-- <div id="storz-card" class="card-container">
+      <div id="storz-card" class="card-container">
         <div id="storz-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Storz Settings</h3>
@@ -54,7 +54,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div> -->
+      </div>
       <!-- Storz end -->
       <div id="printer-card" class="card-container">
         <div id="printer-card-img-div" class="card-img-div"></div>
