--- a/storz.html
+++ b/storz.html
@@ -40,6 +40,48 @@
                     <div id="Vision Pro" data-monitor="VisionPro" class="storz-monitor-button">Vision Pro</div>
                 </div>
             </div>
+            <!-- Storz 1688/4K Specialty Btn Div-->
+            <div id="storz-1688-4K-specialties-div" class="storz-1688-4K-specialties-div">
+                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
+                    <div class="storz-select-ccu-div">Select Specialty</div>
+                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                    <div id="ENT/Skull" data-specialty="ENT/Skull" class="storz-specialty-button">ENT/Skull</div>
+                </div>
+            </div>
+            <!-- End Storz Specialty Btn Div-->
+             <!-- Storz 1688/VP Specialty Btn Div-->
+             <div id="storz-specialties-div" class="storz-specialties-div">
+                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
+                    <div class="storz-select-ccu-div">Select Specialty</div>
+                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                    <div id="ENT" data-specialty="ENT" class="storz-specialty-button">ENT/Skull</div>
+                </div>
+            </div>
+            <!-- End Storz Specialty Btn Div-->
+             <!-- Storz 1588/4K Specialty Btn Div-->
+             <div id="storz-specialties-div" class="storz-specialties-div">
+                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
+                    <div class="storz-select-ccu-div">Select Specialty</div>
+                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                </div>
+            </div>
+            <!-- End Storz Specialty Btn Div-->
+             <!-- Storz 1588/VP Specialty Btn Div-->
+             <div id="storz-specialties-div" class="storz-specialties-div">
+                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
+                    <div class="storz-select-ccu-div">Select Specialty</div>
+                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                </div>
+            </div>
+            <!-- End Storz Specialty Btn Div-->
+            <!-- Storz 1588/WISE Specialty Btn Div-->
+            <div id="storz-specialties-div" class="storz-specialties-div">
+                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
+                    <div class="storz-select-ccu-div">Select Specialty</div>
+                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                </div>
+            </div>
+            <!-- End Storz Specialty Btn Div-->
             <div id="storz-settings-container" class="storz-settings-container">
                 <div id="storz-params-div" class="storz-params-div">
                 </div>
