Adding the Storz settings.

--- a/storz.html
+++ b/storz.html
@@ -26,13 +26,22 @@
                     <div class="storz-title-text-span-div"><p id="storz-title-text" class="storz-title-text"></p><span id="storz-specialty-title-span" class="storz-specialty-title-span"></span></div>
                 </div>
                 <div class="storz-text-div">Storz Settings</div>
-                <div id="storz-reps-div" class="storz-reps-div"></div>
+                <div id="storz-monitor-reps-div" class="storz-reps-div"></div>
             </div>
             <div id="storz-btn-div" class="storz-btn-div">
                 <div class="storz-select-ccu-div">Select CCU</div>
                 <div id="storz-1688" data-ccu="1688" class="storz-ccu-button">1688</div>
                 <div id="storz-1588" data-ccu="1588" class="storz-ccu-button">1588</div>
             </div>
+            <!-- 1588 VisionPro Storz-->
+            <div id="storz-1588-VisionPro-monitors-div" class="storz-1588-VisionPro-monitors-div">
+                <div id="storz-monitors-btn-div" class="storz-monitors-btn-div">
+                    <div class="storz-select-ccu-div">Select Monitor</div>
+                    <div id="Vision Pro" data-monitor="VisionPro" class="storz-monitor-button">Vision Pro</div>
+                    <div id="HDTV Wise" data-monitor="HDTV Wise" class="storz-monitor-button">HDTV Wise</div>
+                </div>
+            </div>
+            <!-- End 1588 VisionPro Storz-->
             <div id="storz-monitors-div" class="storz-monitors-div">
                 <div id="storz-monitors-btn-div" class="storz-monitors-btn-div">
                     <div class="storz-select-ccu-div">Select Monitor</div>
@@ -50,24 +59,16 @@
             </div>
             <!-- End Storz Specialty Btn Div-->
              <!-- Storz 1688/VP Specialty Btn Div-->
-             <div id="storz-specialties-div" class="storz-specialties-div">
+             <div id="storz-1688-VisionPro-specialties-div" class="storz-1688-VisionPro-specialties-div">
                 <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
                     <div class="storz-select-ccu-div">Select Specialty</div>
                     <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
-                    <div id="ENT" data-specialty="ENT" class="storz-specialty-button">ENT/Skull</div>
-                </div>
-            </div>
-            <!-- End Storz Specialty Btn Div-->
-             <!-- Storz 1588/4K Specialty Btn Div-->
-             <div id="storz-specialties-div" class="storz-specialties-div">
-                <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
-                    <div class="storz-select-ccu-div">Select Specialty</div>
-                    <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
+                    <div id="ENT/Skull" data-specialty="ENT/Skull" class="storz-specialty-button">ENT/Skull</div>
                 </div>
             </div>
             <!-- End Storz Specialty Btn Div-->
              <!-- Storz 1588/VP Specialty Btn Div-->
-             <div id="storz-specialties-div" class="storz-specialties-div">
+             <div id="storz-1588-VisionPro-specialties-div" class="storz-1588-VisionPro-specialties-div">
                 <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
                     <div class="storz-select-ccu-div">Select Specialty</div>
                     <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
@@ -75,7 +76,7 @@
             </div>
             <!-- End Storz Specialty Btn Div-->
             <!-- Storz 1588/WISE Specialty Btn Div-->
-            <div id="storz-specialties-div" class="storz-specialties-div">
+            <div id="storz-1588-Wise-specialties-div" class="storz-1588-Wise-specialties-div">
                 <div id="storz-specialties-btn-div" class="storz-specialties-btn-div">
                     <div class="storz-select-ccu-div">Select Specialty</div>
                     <div id="Laparoscopy" data-specialty="Laparoscopy" class="storz-specialty-button">Lap</div>
