Added the Olympus printer settings.

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,14 @@
        <!-- <div class="contact-info-title">Tech Support Contact Information</div> -->
       
        <div class="contact-information-container">
+        <div class="it-contact-param">Tech Support</div>
         <div id="contact-logo-email" class="contact-logo"><div class="email-img"></div></div>
         <div class="contact-param">Email</div>
         <div class="contact-info">endots@stryker.com</div>
        </div>
 
        <div class="contact-information-container">
+        <div class="it-contact-param">Tech Support</div>
         <div id="contact-logo-phone" class="contact-logo"><div class="phone-img"></div></div>
         <div class="contact-param">Phone Number</div>
         <div class="contact-info">408-754-2037</div>
