--- a/printer.html
+++ b/printer.html
@@ -113,6 +113,32 @@
                 >Spy-phi</a
               >
             </div>
+            <div class="first-botton-div">
+              <div
+                id="Olympus_Ortho_1"
+                class="printer-specialty-buttons-div"
+                align="center"
+              >
+                <a
+                  class="printer-specialty-example_a"
+                  href="#"
+                  data-specialty="Olympus_Ortho_1"
+                  >Olympus Ortho 1</a
+                >
+              </div>
+              <div
+                id="Olympus_Ortho_2"
+                class="printer-specialty-buttons-div"
+                align="center"
+              >
+                <a
+                  class="printer-specialty-example_a"
+                  href="#"
+                  data-specialty="Olympus_Ortho_2"
+                  >Olympus Ortho 2</a
+                >
+              </div>
+            </div>
           </div>
           <div
             id="printer-printers-div"
@@ -321,6 +347,146 @@
                 <div class="hub-printer-settings-div">
                   <div class="printer-settings">
                     <p class="printer-setting">10</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Chroma</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">83</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Sharpness</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">660</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Olympus Ortho 1 Printer Settings -->
+
+          <div id="hub-olympus-ortho1-settings-div" class="hub-olympus-ortho1-settings-div">
+            <div class="hub-printer-settings-title-div">
+              <h3 class="settings-title-h3">1688 Olympus Ortho 1</h3>
+              <p class="title-text-printer-settings">Printer Settings</p>
+            </div>
+            <div class="printer-settings-container">
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Brightness</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">-30</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Contrast</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">180</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Phase</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">-10</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Chroma</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">83</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Sharpness</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">660</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Olympus Ortho 2 Printer Settings -->
+
+          <div id="hub-olympus-ortho2-settings-div" class="hub-olympus-ortho2-settings-div">
+            <div class="hub-printer-settings-title-div">
+              <h3 class="settings-title-h3">1688 Olympus Ortho 2</h3>
+              <p class="title-text-printer-settings">Printer Settings</p>
+            </div>
+            <div class="printer-settings-container">
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Brightness</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">22</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Contrast</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">180</p>
+                  </div>
+                </div>
+              </div>
+              <div class="printer-settings-div">
+                <div class="hub-printer-parameter-div">
+                  <div class="printer-parameters">
+                    <p class="printer-parameter">Phase</p>
+                  </div>
+                </div>
+                <div class="hub-printer-settings-div">
+                  <div class="printer-settings">
+                    <p class="printer-setting">-10</p>
                   </div>
                 </div>
               </div>
