--- a/olympus.html
+++ b/olympus.html
@@ -27,15 +27,17 @@
             </div>
             <div id="olympus-btn-div" class="olympus-btn-div">
                 <div class="olympus-select-specialty-div">Select Specialty</div>
-                <!-- <div id="olympus-laser-specialty" data-specialty="Laser" class="olympus-specialty-button">Laser</div> -->
-                <!-- <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div> -->
+                <div id="olympus-laser-specialty" data-specialty="Laser" class="olympus-specialty-button">Laser</div>
+                <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div>
+                <div id="olympus-laparoscopy-specialty" data-specialty="Laparoscopy" class="olympus-specialty-button">Laparoscopy</div>
+
                 <div id="olympus-ortho 1-specialty" data-specialty="Ortho 1" class="olympus-specialty-button">Ortho 1</div>
                 <div id="olympus-ortho 2-specialty" data-specialty="Ortho 2" class="olympus-specialty-button">Ortho 2</div>
                 <div id="olympus-ortho 3-specialty" data-specialty="Ortho 3" class="olympus-specialty-button">Ortho 3</div>
                 <div id="olympus-ent 1-specialty" data-specialty="ENT 1" class="olympus-specialty-button">ENT 1</div>
                 <div id="olympus-ent 2-specialty" data-specialty="ENT 2" class="olympus-specialty-button">ENT 2</div>
                 <div id="olympus-ent 3-specialty" data-specialty="ENT 3" class="olympus-specialty-button">ENT 3</div>
-                <!-- <div id="olympus-ent 4-specialty" data-specialty="ENT 4" class="olympus-specialty-button">ENT 4</div> -->
+                <div id="olympus-ent 4-specialty" data-specialty="ENT 4" class="olympus-specialty-button">ENT 4</div>
                 <div id="olympus-ent 5-specialty" data-specialty="ENT 5" class="olympus-specialty-button">ENT 5</div>
                 <div id="olympus-rigid uro-specialty" data-specialty="Rigid Uro" class="olympus-specialty-button">Rigid Uro</div>
                 <div id="olympus-semi-rigid uro-specialty" data-specialty="Semi-Rigid Uro" class="olympus-specialty-button">Semi-Rigid Uro</div>
