Changed specialty names of Olympus settings.

--- a/olympus.html
+++ b/olympus.html
@@ -27,9 +27,9 @@
             </div>
             <div id="olympus-btn-div" class="olympus-btn-div">
                 <div class="olympus-select-specialty-div">Select Specialty</div>
-                <div id="olympus-laser-specialty" data-specialty="Laser" class="olympus-specialty-button">Laser</div>
-                <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div>
-                <div id="olympus-laparoscopy-specialty" data-specialty="Laparoscopy" class="olympus-specialty-button">Laparoscopy</div>
+                <div id="olympus-Laparoscopy1-specialty" data-specialty="Laparoscopy 1" class="olympus-specialty-button">Laparoscopy 1</div>
+                <div id="olympus-Laparoscopy2-specialty" data-specialty="Laparoscopy 2" class="olympus-specialty-button">Laparoscopy 2</div>
+                <div id="olympus-Laparoscopy3-specialty" data-specialty="Laparoscopy 3" class="olympus-specialty-button">Laparoscopy 3</div>
 
                 <div id="olympus-ortho 1-specialty" data-specialty="Ortho 1" class="olympus-specialty-button">Ortho 1</div>
                 <div id="olympus-ortho 2-specialty" data-specialty="Ortho 2" class="olympus-specialty-button">Ortho 2</div>
