Small typographical error.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The most current Storz settings for our 1688 platform and selected legacy equiptment.
+            The most current Storz settings for our 1688 platform and selected legacy equipment.
           </p>
         </div>
         <div class="card-btn-div"></div>
