Adding sports med complaint feature.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="card-btn-div"></div>
       </div>
       <!-- End Contact Tile-->
+      <!-- Share Your Settings Feature-->
       <div id="contribute-settings-card" class="card-container">
         <div id="contribute-settings-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
@@ -103,6 +104,19 @@
           <p class="card-text-text">
             Do you have settings that are perfectly dialed in? Share them here
             with the sales force team.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
+       <!-- Sports Med Complaint Feature -->
+       <div id="sports-med-complaint" class="card-container">
+        <div id="sports-med-complaint-div" class="card-img-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">Sports Med Complaints</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            Submit the necessary information to file a complaint.
           </p>
         </div>
         <div class="card-btn-div"></div>
