Commented out the html and javascript of the complaint feature.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="card-btn-div"></div>
       </div>
        <!-- Sports Med Complaint Feature -->
-       <div id="sports-med-complaint" class="card-container">
+       <!-- <div id="sports-med-complaint" class="card-container">
         <div id="sports-med-complaint-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">Sports Med Complaints</h3>
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div>
+      </div> -->
       <!-- Suggestions Tile-->
       <div id="idea-card" class="card-container">
         <div id="idea-card-img-div" class="card-img-div"></div>
